# doc-editor

./: .env.example  .gitignore  .npmrc  DEPLOYMENT.md  DEVELOPMENT.md  README.md  biome.json  biome.jsonc  cargo.toml  commitlint.config.mjs  knip.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.client.json  tsconfig.json  turbo.json  turbo.jsonc
apps/api/: .env.example  Cargo.toml  package.json
apps/api/migrations/: 20250306_create_documents.down.sql  20250306_create_documents.up.sql  20250318_add_auth_provider.down.sql  20250318_add_auth_provider.up.sql
apps/api/src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  repositories.rs  routes.rs  utils.rs
apps/api/src/controllers/: document_controller.rs  mod.rs  user_controller.rs
apps/api/src/database/: mod.rs
apps/api/src/db/: document.rs  user.rs
apps/api/src/errors/: mod.rs
apps/api/src/handlers/: auth.rs  users.rs
apps/api/src/handlers/auth/: README.md  login.rs  oauth.rs  passwords.rs  register.rs
apps/api/src/handlers/auth/oauth/: README.md  github.rs  google.rs
apps/api/src/mail/: mails.rs  sendmail.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: document.rs  mod.rs  user.rs
apps/api/src/repositories/: document.rs  user.rs
apps/api/src/routes/: mod.rs
apps/api/src/utils/: password.rs  token.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: biome.json  components.json  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  entry.client.tsx  index.css  main.tsx  react-router.d.ts  root.tsx  routes.ts
apps/web/src/blocks/ai/: ai.tsx
apps/web/src/blocks/mention/: MentionContent.tsx  index.ts  mention.tsx
apps/web/src/components/: Loader.tsx  ThemeToggle.tsx  index.ts  signin-form.tsx
apps/web/src/components/layout/: AppSidebar.tsx  Header.tsx  RootLayout.tsx  Sidebar.tsx  index.ts
apps/web/src/components/provider/: theme-provider.tsx
apps/web/src/editor/components/: Editor.tsx  index.ts
apps/web/src/icons/: Icon.tsx  IconShowcase.tsx  index.ts
apps/web/src/routes/: Documents.tsx  Home.tsx  IconsDemo.tsx
apps/web/src/routes/sign/: SignIn.tsx
apps/web/src/types/: page.ts
apps/web/src/ui/: background-lines.tsx  button.tsx  colorful-text.tsx  input.tsx  label.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  tooltip.tsx
apps/web/src/utils/: randomEmoji.ts
docker/: Caddyfile  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  nginx.conf
docs/: ROADMAP.md  VERSION-MANAGEMENT.md
tools/: clean.js  setup.sh  update-deps.js
