[package]
name = "doc-editor-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web框架
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# 服务器
tokio = { version = "1.43.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# 数据库
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "json",
  "uuid",
  "time",
] }
uuid = { version = "1.15.0", features = ["v4", "serde"] }

# 错误处理
anyhow = "1.0.96"
thiserror = "2.0.11"

# 认证
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"

# 环境变量
dotenvy = "0.15.7"

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# 实用工具
time = { version = "0.3.37", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
