[package]
name = "doc-editor-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.87"

# Web框架
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# 服务器
tokio = { version = "1.44.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }

# 序列化/反序列化
serde.workspace = true
serde_json.workspace = true

# 数据库
sqlx = { version = "0.8.3", features = [
  "runtime-async-std-rustls",
  "postgres",
  "json",
  "chrono",
  "uuid",
] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 认证
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"

# 环境变量
dotenvy = "0.15.7"

# 日志
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

# 实用工具
time = { version = "0.3.39", features = ["serde", "macros"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }

# 邮件
lettre = "0.11.14"
